@@ -9,7 +9,7 @@ $EM_CONF[$_EXTKEY] = [
     'title' => 'Table Library',
     'description' => 'This contains a base class which you can use to make your extensions independant from any specific table. And it can be used to make multiple language support with a separate language overlay table or by a CSV file.',
     'category' => 'misc',
-    'version' => '0.13.0',
+    'version' => '0.13.1',
     'state' => 'stable',
     'author' => 'Franz Holzinger',
     'author_email' => 'franz@ttproducts.de',
